--- a/solution_files/bicep/part2/contactWebAppService.parameters.json
+++ b/solution_files/bicep/part2/contactWebAppService.parameters.json
@@ -28,6 +28,9 @@
         },
         "appInsightsConnectionStringKey": { 
             "value": "APPINSIGHTS:CONNECTIONSTRING"
+        },
+        "logAnalyticsWorkspaceName": {
+            "value": "contactWebAnalytics"
         }
     }
 }
